留言板 子回复

--- a/redrock4/level2/assets/main.css
+++ b/redrock4/level2/assets/main.css
@@ -152,11 +152,16 @@ textarea {
 
 .controls {
     /* https://codeday.me/bug/20170409/9648.html */
-    margin-left: auto;
     margin-right: 4px;
     color: #999999;
 }
 
 .controls i {
     margin-right: 4px;
+}
+
+.fas.fa-quote-right {
+    margin-top: 4px;
+    margin-left: auto;
+    margin-right: 10px;
 }
