--- a/redrock5/assets/css/main.css
+++ b/redrock5/assets/css/main.css
@@ -12,6 +12,7 @@ body,html,button {
 
 .namesbox {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -58,6 +59,19 @@ body,html,button {
     #name {
         width: 100%;
         margin: auto auto;
+        font-size: 12px;
+    }
+
+    .namewords {
+        font-size: 17px;
+    }
+
+    .namebox {
+        width: 130px;
+        height: 140px;
+        padding: 15px;
+        border: 3px solid black;
+        margin: 15px;
     }
     
 }
