[提交] 从 json 中加载

--- a/redrock8/src/CarouseIndex/carouse-index.less
+++ b/redrock8/src/CarouseIndex/carouse-index.less
@@ -30,7 +30,7 @@ h1 {
   text-align: center;
   color: #bbbbbb;
 }
-.carrousel .slides {
+.slides {
   width: 400%;
   left: 0;
   padding-left: 0;
@@ -43,34 +43,6 @@ h1 {
   -moz-transition: transform .5s;
   -o-transition: transform .5s;
   transition: transform .5s;
-}
-.carrousel .slides li {
-  width: 25%;
-  position: relative;
-  float: left;
-}
-.carrousel li p{
-  margin-top: 0;  
-}
-.carrousel li q {
-  max-width: 90%;
-  margin: auto;
-  color: #666666;
-  font-size: 1.3em;
-  font-weight: bold;
-}
-.carrousel li img {
-  width:3em;
-  border-radius: 50%;
-  margin-left: -1.5em;
-  margin-right: 0.5em;
-  vertical-align: middle;
-}
-.carrousel li span.author {
-  margin-top:0.5em;
-  font-size: 1.2em;
-  color: #777777;
-  display: block;
 }
 .carrousel .slidesNavigation {
   display: block;
