[提交] 使用 js 来控制

--- a/redrock8/src/CarouseIndex/carouse-index.less
+++ b/redrock8/src/CarouseIndex/carouse-index.less
@@ -44,7 +44,7 @@ h1 {
   -o-transition: transform .5s;
   transition: transform .5s;
 }
-.carrousel .slidesNavigation {
+.carrousel #slidesNavigation {
   display: block;
   list-style: none;
   text-align: center;
@@ -60,7 +60,7 @@ h1 {
 .carrousel input {
   display: none;
 }
-.carrousel .slidesNavigation label {
+.carrousel #slidesNavigation .radio {
   float: left;
   margin: 6px;
   display: block;
