style(carouse): 代码风格
1. margin 合并
2. 拼写

--- a/redrock8/src/CarouseIndex/carouse-index.less
+++ b/redrock8/src/CarouseIndex/carouse-index.less
@@ -13,7 +13,7 @@ h1 {
 
 
 /*Carousel*/
-.carrousel {
+.carousel {
   background: #ffffff;
   text-align: center;
   padding: 4em 0;
@@ -24,9 +24,8 @@ h1 {
   overflow: hidden;
 }
 
-.carrousel h2 {
-  margin: 0;
-  margin-top: -1.7em;
+.carousel h2 {
+  margin: -1.7em 0 0;
   padding: 0;
   font-size: 1em;
   text-align: center;
@@ -48,7 +47,7 @@ carouse-item {
   width: 100%;
 }
 
-.carrousel #slidesNavigation {
+.carousel #slidesNavigation {
   display: block;
   list-style: none;
   text-align: center;
@@ -57,11 +56,11 @@ carouse-item {
   transform: translate(-50%, -50%);
 }
 
-.carrousel input {
+.carousel input {
   display: none;
 }
 
-.carrousel #slidesNavigation .radio {
+.carousel #slidesNavigation .radio {
   float: left;
   margin: 6px;
   display: block;
@@ -79,22 +78,22 @@ carouse-item {
 }
 
 @media (max-width: 796px) {
-  .carrousel {
+  .carousel {
     height: 8.5em;
   }
 }
 
 @media (max-width: 480px) {
-  .carrousel li p {
+  .carousel li p {
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
 
-  .carrousel li q {
+  .carousel li q {
     font-size: 1em;
   }
 
-  .carrousel li img {
+  .carousel li img {
     width: 2em;
     margin-left: -1em;
     margin-right: 0.25em;
